# zpr-project-old

./: CMakeLists.txt  resources.cfg
assets/materials/blocks/: stone.material
cmake/: FindOIS.cmake
src/: main.cpp
src/block/: Abstract.cpp  Abstract.h  SolidAbstract.cpp  SolidAbstract.h
src/block/terrain/: Stone.cpp  Stone.h
src/game/: Camera.cpp  Camera.h  GameManager.cpp  GameManager.h  GameWindow.cpp  GameWindow.h
src/lib/: PerlinNoise.cpp  PerlinNoise.h
src/sys/: Path.cpp  Path.h  ResourceLoader.cpp  ResourceLoader.h
src/world/: Chunk.cpp  Chunk.h  World.cpp  World.h
